@@ -8,7 +8,7 @@
 \alias{LinearMethodsList-class}
 \title{Class "LinearMethodsList"}
 \description{
-  A version of methods lists that has been \dQuote{linearized}
+  A version of methods lists that has been \sQuote{linearized}
   for producing summary information.  The actual objects from class
   \code{"MethodsList"} used for method dispatch are defined recursively
   over the arguments involved.
